A11yKeyboardMonitor: Fix KeyEvent being emitted too often when grabbing keys

When grabbing the keys we should only emit once per key. Reshuffle the code
so that we return when we hit the grab condition. We need to handle the case
of pressing a modifier twice before that though.

Also add more extensive autotesting

BUG: 512189